--- a/demo/shadow-dom-enabled.html
+++ b/demo/shadow-dom-enabled.html
@@ -5,6 +5,7 @@
 		<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			import '@brightspace-ui/core/components/demo/demo-page.js';
+			import '@brightspace-ui/core/components/dialog/dialog.js';
 			import '../htmleditor-wc.js';
 			import { html, LitElement } from 'lit-element/lit-element.js';
 
@@ -56,7 +57,31 @@
 				</template>
 			</d2l-demo-snippet>
 
-			<h2>Full Page</h2>
+			<h2>Dialog</h2>
+
+			<d2l-demo-snippet>
+				<template>
+					<d2l-button id="open">Show Dialog</d2l-button>
+					<d2l-dialog id="dialog" title-text="HTML Editor in a Dialog">
+						<div>
+							<d2l-htmleditor height="250">
+								<template>
+									<p>Hello World!</p>
+								</template>
+							</d2l-htmleditor>
+						</div>
+						<d2l-button slot="footer" primary data-dialog-action="ok">Ok</d2l-button>
+						<d2l-button slot="footer" data-dialog-action>Cancel</d2l-button>
+					</d2l-dialog>
+					<script>
+						document.querySelector('#open').addEventListener('click', () => {
+							document.querySelector('#dialog').opened = true;
+						});
+					</script>
+				</template>
+			</d2l-demo-snippet>
+
+			<h2>Full Document</h2>
 
 			<d2l-demo-snippet>
 				<template>
