--- a/demo/htmleditor.html
+++ b/demo/htmleditor.html
@@ -5,7 +5,7 @@
 		<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			import '@brightspace-ui/core/components/demo/demo-page.js';
-			import '../htmleditor-standard.js';
+			import '../htmleditor.js';
 			import { html, LitElement } from 'lit-element/lit-element.js';
 
 			class DemoWrapper extends LitElement {
