--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 	<h1 class="d2l-heading-2">Demos</h1>
 
 	<ul>
-		<li><a href="demo/headless-tiny.html">d2l-htmleditor (using core tinymce, rendering our own ui)</a></li>
-		<li><a href="demo/standard-tiny.html">d2l-htmleditor (using tinymce and all its ui)</a></li>
+		<li><a href="demo/htmleditor.html">d2l-htmleditor (using tinymce and all its ui)</a></li>
 	</ul>
 
 </body>
