--- a/test/htmleditor.visual-diff.html
+++ b/test/htmleditor.visual-diff.html
@@ -8,7 +8,7 @@
 		<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			import '@brightspace-ui/core/components/typography/typography.js';
-			import '../htmleditor-standard.js';
+			import '../htmleditor.js';
 		</script>
 		<style>
 			html {
