Add a visual-diff test for fullscreen mode.

--- a/test/htmleditor.visual-diff.html
+++ b/test/htmleditor.visual-diff.html
@@ -24,7 +24,7 @@
 	</head>
 	<body class="d2l-typography">
 		<div class="visual-diff">
-			<d2l-htmleditor id="default"></d2l-htmleditor>
+			<d2l-htmleditor id="inline-full"></d2l-htmleditor>
 		</div>
 	</body>
 </html>
